# robocon

Scene/models/mjcf/: mocap_env.xml  robocon2026.xml  robocon2026_old.xml  scene_g1.xml  scene_go1.xml  scene_go2.xml  scene_t1.xml  scene_tron.xml
Scene/models/robots/booster_t1/: t1_mjx_feetonly.xml
Scene/models/robots/tron_a1/: sf_a1.xml  sf_a1_mjx.xml  sf_a1_mjx_feetonly.xml
Scene/models/robots/unitree_g1/: g1_mjx_feetonly.xml
Scene/models/robots/unitree_go1/: go1_mjx_feetonly.xml  go1_mjx_fullcollisions.xml
Scene/models/robots/unitree_go2/: go2_mjx_feetonly.xml  go2_mjx_fullcollisions.xml
depthCam/realsense_d435/: CMakeLists.txt  package.xml  workspace_setup.sh
depthCam/realsense_d435/source_files/: depth_filter_node.cpp  pointcloud_filter_node.cpp
model/training/: training.ipynb
model/training/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  camera_test-checkpoint.py
model/training/runs/detect/robocon_test_model/: args.yaml  results.csv
model/training/runs/detect/robocon_test_model2/: args.yaml  results.csv
model/training/runs/detect/robocon_test_model3/: args.yaml  results.csv
model/training/runs/detect/robocon_test_model4/: args.yaml
model/training/runs/detect/robocon_test_model5/: args.yaml  results.csv
path_planning/: ForestPlanner.html
path_planning/forest-planner/: index.html  package-lock.json  package.json
path_planning/forest-planner/src/: App.jsx  ForestPlanner.jsx
setup/ROS2_install/: install_ros2_humble.sh
setup/RTAB_map/: install_rtabmap.sh
setup/dependencies/: dependencies_pcl_opencv.sh
setup/realsenseSDK/: install_realsenseSDK_ROS2.sh
setup/terminal_cmd/: RTABmap.sh  Rviz2.sh  build_pkg.sh  terminal1_realsense_D435_camera.sh  terminal2_depth_pc_filter.sh
setup/terminal_cmd/node_verification/: RTABmap.sh  terminal1_realsense_D435_camera.sh  terminal2_depth_pc_filter.sh
